# BlockChain

./: CMakeLists.txt  LICENSE  README.md  main.cpp  run.ps1
00 - hash/: CMakeLists.txt  script.bat
01 - block/: CMakeLists.txt  script.bat
01 - block/include/: block.h  hash.h
01 - block/lib/: block.cpp
01 - block/src/: block_main.cpp
02 - blockchain/: CMakeLists.txt  script.bat
02 - blockchain/include/: block.h  blockchain.h
02 - blockchain/lib/: blockchain.cpp
02 - blockchain/src/: blockchain_main.cpp
03 - merkle-tree/: CMakeLists.txt
03 - merkle-tree/include/: merkle_tree.h
03 - merkle-tree/src/: merkle_tree_main.cpp
04 - p2p/: CMakeLists.txt
04 - p2p/src/: p2p_main.cpp
05 - blockchain 2/: CMakeLists.txt
05 - blockchain 2/include/: block.h  blockchain.h  jtc.h  miner.h  signatures.h  transaction.h  user.h  wallet.h
05 - blockchain 2/lib/: blockchain.cpp  miner.cpp  signatures.cpp  transaction.cpp  user.cpp  wallet.cpp
05 - blockchain 2/src/: blockchain_main.cpp
block/: CMakeLists.txt
block/include/: block.h
block/lib/: block.cpp  hash.cpp
block/src/: block_main.cpp
hash/include/: hash.h
hash/src/: hash_main.cpp
include/: block_class.h  bloco.h  include.txt  money.h  teste.h
lib/: lib.txt  money.cpp
src/: driver.cpp  hash.cpp  main.cpp  src.txt
test/: test.txt
